test/spec/br_table.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br_table.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1386:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-arg-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1386:11: type stack at end of function is 0. expected 1
  (module (func $type-arg-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1394:17: type stack size too small at br_table default target. got 0, expected at least 1
    (block i32 (br_table 0 (nop) (i32.const 1)) (i32.const 1))
                ^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1400:17: type mismatch at br_table target. got i64, expected i32
    (block i32 (br_table 0 0 0 (i64.const 1) (i32.const 1)) (i32.const 1))
                ^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1400:17: type mismatch at br_table target. got i64, expected i32
    (block i32 (br_table 0 0 0 (i64.const 1) (i32.const 1)) (i32.const 1))
                ^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1400:17: type mismatch at br_table default target. got i64, expected i32
    (block i32 (br_table 0 0 0 (i64.const 1) (i32.const 1)) (i32.const 1))
                ^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1407:13: type stack size too small at br_table key. got 0, expected at least 1
    (block (br_table 0 0 0 (nop)))
            ^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1413:13: type mismatch at br_table key. got i64, expected i32
    (block (br_table 0 (i64.const 0)))
            ^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1419:17: type stack size too small at br_table target. got 0, expected at least 1
    (block i32 (br_table 0 0 (i32.const 0) (nop)) (i32.const 1))
                ^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1419:17: type stack size too small at br_table default target. got 0, expected at least 1
    (block i32 (br_table 0 0 (i32.const 0) (nop)) (i32.const 1))
                ^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1425:17: type mismatch at br_table key. got i64, expected i32
    (block i32 (br_table 0 0 (i32.const 0) (i64.const 0)) (i32.const 1))
                ^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1432:22: label variable out of range (max 2)
    (block (br_table 2 1 (i32.const 1)))
                     ^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1438:31: label variable out of range (max 3)
    (block (block (br_table 0 5 (i32.const 1))))
                              ^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1444:24: label variable out of range (max 2)
    (block (br_table 0 0x10000001 0 (i32.const 1)))
                       ^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1451:24: label variable out of range (max 2)
    (block (br_table 1 2 (i32.const 1)))
                       ^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1457:31: label variable out of range (max 3)
    (block (block (br_table 0 5 (i32.const 1))))
                              ^
assert_invalid error:
  out/third_party/testsuite/br_table.wast:1463:26: label variable out of range (max 2)
    (block (br_table 0 0 0x10000001 (i32.const 1)))
                         ^^^^^^^^^^
out/third_party/testsuite/br_table.wast:1386: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000023: end_function_body callback failed
out/third_party/testsuite/br_table.wast:1393: assert_invalid passed:
  error: type stack size too small at br_table. got 0, expected at least 1
  error: @0x00000020: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1399: assert_invalid passed:
  error: type mismatch in br_table, expected i32 but got i64.
  error: @0x00000023: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1406: assert_invalid passed:
  error: type stack size too small at br_table. got 0, expected at least 1
  error: @0x0000001f: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1412: assert_invalid passed:
  error: type mismatch in br_table, expected i32 but got i64.
  error: @0x0000001e: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1418: assert_invalid passed:
  error: type stack size too small at br_table. got 0, expected at least 1
  error: @0x00000021: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1424: assert_invalid passed:
  error: type mismatch in br_table, expected i32 but got i64.
  error: @0x00000022: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1431: assert_invalid passed:
  error: invalid depth: 2 (max 2)
  error: @0x0000001f: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1437: assert_invalid passed:
  error: invalid depth: 5 (max 3)
  error: @0x00000021: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1443: assert_invalid passed:
  error: invalid depth: 268435457 (max 2)
  error: @0x00000024: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1450: assert_invalid passed:
  error: invalid depth: 2 (max 2)
  error: @0x0000001f: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1456: assert_invalid passed:
  error: invalid depth: 5 (max 3)
  error: @0x00000021: on_br_table_expr callback failed
out/third_party/testsuite/br_table.wast:1462: assert_invalid passed:
  error: invalid depth: 268435457 (max 2)
  error: @0x00000024: on_br_table_expr callback failed
156/156 tests passed.
;;; STDOUT ;;)
